Burak Sandbox/force-app/main/default/objects/Account/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <inlineHelpText>The reason why the account has hard churned</inlineHelpText>
    <label>Churn Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Restructuring</fullName>
            </value>
            <value>
                <fullName>Missing Personal Contact</fullName>
                <label>Missing Personal Contact/Old Habits</label>
            </value>
            <value>
                <fullName>Missing Product Features</fullName>
            </value>
            <value>
                <fullName>Not That Many Orders</fullName>
            </value>
            <value>
                <fullName>Order Issue (Internal)</fullName>
            </value>
            <value>
                <fullName>Order Issue (External)</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Improper Onboarding</fullName>
                <label>Poor Onboarding</label>
            </value>
            <value>
                <fullName>Seasonal Closure</fullName>
            </value>
            <value>
                <fullName>Supplier Influence</fullName>
            </value>
            <value>
                <fullName>Rekki</fullName>
            </value>
            <value>
                <fullName>Other Competition</fullName>
            </value>
            <value>
                <fullName>Temporarily Out of Business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Yokitup</fullName>
            </value>
            <value>
                <fullName>Easilys</fullName>
            </value>
            <value>
                <fullName>Out of the business</fullName>
            </value>
            <value>
                <fullName>Lists Too Long</fullName>
                <isActive>false</isActive>
                <label>Lists Too Long</label>
            </value>
            <value>
                <fullName>New Suppliers</fullName>
                <isActive>false</isActive>
                <label>New Suppliers</label>
            </value>
            <value>
                <fullName>No Confirmations</fullName>
                <isActive>false</isActive>
                <label>No Confirmations</label>
            </value>
            <value>
                <fullName>No Process Improvement</fullName>
                <isActive>false</isActive>
                <label>No Process Improvement</label>
            </value>
            <value>
                <fullName>Webshops</fullName>
                <isActive>false</isActive>
                <label>Prefer Webshops</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>