Burak Sandbox/force-app/main/default/objects/Account/fields/Churn_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason_Details__c</fullName>
    <inlineHelpText>Detailed explanation for Churn Reason</inlineHelpText>
    <label>Churn Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>