Burak Sandbox/force-app/main/default/objects/Account/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <inlineHelpText>Person who closed the lead</inlineHelpText>
    <label>Closer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>