Burak Sandbox/force-app/main/default/objects/Account/fields/Closer_ID__c.field-meta.xml
<CustomField>
    <fullName>Closer_ID__c</fullName>
    <label>Closer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>