Burak Sandbox/force-app/main/default/objects/Account/fields/Closer_Name__c.field-meta.xml
<CustomField>
    <fullName>Closer_Name__c</fullName>
    <formula>CloserUser__r.FirstName +&quot; &quot;+ CloserUser__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closer Name</label>
    <type>Text</type>
</CustomField>