Burak Sandbox/force-app/main/default/objects/Account/fields/Closer_Role__c.field-meta.xml
<CustomField>
    <fullName>Closer_Role__c</fullName>
    <description>Closer Role - sourced from Opportunity with a flow name: Update NAB date &amp; closer role &amp; closer ID
This should be the name of the last person that closed an opportunity related to this account.</description>
    <inlineHelpText>This is the name of the last person that closed an opportunity related to this account.</inlineHelpText>
    <label>Closer Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>