Burak Sandbox/force-app/main/default/objects/Account/fields/CloserUser__c.field-meta.xml
<CustomField>
    <fullName>CloserUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closer</relationshipName>
    <type>Lookup</type>
</CustomField>