Burak Sandbox/force-app/main/default/objects/Account/fields/Comment_for_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comment_for_Sales__c</fullName>
    <inlineHelpText>This will be communicated to the Lead Owner</inlineHelpText>
    <label>Information Feedback Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>