Burak Sandbox/force-app/main/default/objects/Account/fields/CommentRevisitDisqualify__c.field-meta.xml
<CustomField>
    <fullName>CommentRevisitDisqualify__c</fullName>
    <label>Revisit Later / Disqualify Comment</label>
    <type>TextArea</type>
</CustomField>