Burak Sandbox/force-app/main/default/objects/Account/fields/Commercial_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Agreement__c</fullName>
    <inlineHelpText>Please select the signed commercial (revenue generating) agreement you have</inlineHelpText>
    <label>Commercial Agreement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplier_Commercial_Agreement</valueSetName>
    </valueSet>
</CustomField>