Burak Sandbox/force-app/main/default/objects/Account/fields/Commercial_Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Agreement_Signed_Date__c</fullName>
    <inlineHelpText>Date of the first commercial contract signed with the company</inlineHelpText>
    <label>Commercial Agreement Signed Date</label>
    <type>Date</type>
</CustomField>