Burak Sandbox/force-app/main/default/objects/Account/fields/Commercial_Details__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Details__c</fullName>
    <label>Commercial Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>