Burak Sandbox/force-app/main/default/objects/Account/fields/Commercial_Package__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Package__c</fullName>
    <defaultValue>&quot;Basic&quot;</defaultValue>
    <label>Commercial Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Premium &amp; Marketplace</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>