Burak Sandbox/force-app/main/default/objects/Account/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agora</fullName>
            </value>
            <value>
                <fullName>Amoenus</fullName>
            </value>
            <value>
                <fullName>Azapi</fullName>
            </value>
            <value>
                <fullName>Cheetah</fullName>
            </value>
            <value>
                <fullName>Chefslist</fullName>
            </value>
            <value>
                <fullName>CityBuy</fullName>
            </value>
            <value>
                <fullName>CMV</fullName>
            </value>
            <value>
                <fullName>Compeat</fullName>
            </value>
            <value>
                <fullName>Comtrex</fullName>
            </value>
            <value>
                <fullName>Craftable</fullName>
            </value>
            <value>
                <fullName>Easilys</fullName>
            </value>
            <value>
                <fullName>Exum</fullName>
            </value>
            <value>
                <fullName>Foodnotify</fullName>
            </value>
            <value>
                <fullName>FoodRazor</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Gastivo</fullName>
            </value>
            <value>
                <fullName>Grapes</fullName>
            </value>
            <value>
                <fullName>Gstock</fullName>
            </value>
            <value>
                <fullName>inONE</fullName>
            </value>
            <value>
                <fullName>Jelly</fullName>
            </value>
            <value>
                <fullName>Katoo</fullName>
            </value>
            <value>
                <fullName>Kellex</fullName>
            </value>
            <value>
                <fullName>Kitchen Cut</fullName>
            </value>
            <value>
                <fullName>Kitchify</fullName>
            </value>
            <value>
                <fullName>Kollex</fullName>
            </value>
            <value>
                <fullName>Marketman</fullName>
            </value>
            <value>
                <fullName>Micros (Oracle)</fullName>
            </value>
            <value>
                <fullName>Net resto</fullName>
            </value>
            <value>
                <fullName>Octopus</fullName>
            </value>
            <value>
                <fullName>Oktopus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>