Burak Sandbox/force-app/main/default/objects/Account/fields/Confirmation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Rate__c</fullName>
    <formula>IF( AND(RecordType.Name = &quot;Supplier&quot;, Total_Orders__c &gt; 0),
(Number_of_Confirmed_Orders__c / Total_Orders__c ),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>