Burak Sandbox/force-app/main/default/objects/Account/fields/Contact_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Contact_Frequency__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <inlineHelpText>How much interaction you need with a restaurant</inlineHelpText>
    <label>Contact Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Low Touch (1 p.m.)</fullName>
            </value>
            <value>
                <fullName>High Touch (2-4 p.m.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>