Burak Sandbox/force-app/main/default/objects/Account/fields/Contact_Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Contact_Marketing_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Opt In?</label>
    <type>Checkbox</type>
</CustomField>