Burak Sandbox/force-app/main/default/objects/Account/fields/Contact_Priority__c.field-meta.xml
<CustomField>
    <fullName>Contact_Priority__c</fullName>
    <inlineHelpText>How soon should we reach out - this week, next week, within the month?</inlineHelpText>
    <label>Contact Priority</label>
    <type>Date</type>
</CustomField>