Burak Sandbox/force-app/main/default/objects/Account/fields/Contact_Referral__c.field-meta.xml
<CustomField>
    <fullName>Contact_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Referral</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact Referral)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>