Burak Sandbox/force-app/main/default/objects/Account/fields/contacts_linked__c.field-meta.xml
<CustomField>
    <fullName>contacts_linked__c</fullName>
    <label># Of Contacts Linked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>