Burak Sandbox/force-app/main/default/objects/Account/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <inlineHelpText>Date that Supplier converted to active user of Supplier Tool</inlineHelpText>
    <label>Choco Web Conversion Date</label>
    <type>Date</type>
</CustomField>