Burak Sandbox/force-app/main/default/objects/Account/fields/Corporate_Directors__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Directors__c</fullName>
    <label>Corporate Directors</label>
    <type>TextArea</type>
</CustomField>