Burak Sandbox/force-app/main/default/objects/Account/fields/Cover_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Cover_Photo_URL__c</fullName>
    <label>Cover Photo URL</label>
    <type>Url</type>
</CustomField>