Burak Sandbox/force-app/main/default/objects/Account/fields/CS_Comment__c.field-meta.xml
<CustomField>
    <fullName>CS_Comment__c</fullName>
    <label>CS Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>