Burak Sandbox/force-app/main/default/objects/Account/fields/CS_Communication__c.field-meta.xml
<CustomField>
    <fullName>CS_Communication__c</fullName>
    <label>CS Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Stealth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>