Burak Sandbox/force-app/main/default/objects/Account/fields/CS_Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_Channel__c</fullName>
    <inlineHelpText>Best channel to ask for lists from supplier</inlineHelpText>
    <label>CS Contact Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>