Burak Sandbox/force-app/main/default/objects/Account/fields/CS_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_Email__c</fullName>
    <label>CS Contact Email</label>
    <type>Email</type>
</CustomField>