Burak Sandbox/force-app/main/default/objects/Account/fields/CS_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_Phone__c</fullName>
    <inlineHelpText>Please start with +</inlineHelpText>
    <label>CS Contact Phone</label>
    <type>Phone</type>
</CustomField>