Burak Sandbox/force-app/main/default/objects/Account/fields/CS_Trusted_Supplier__c.field-meta.xml
<CustomField>
    <fullName>CS_Trusted_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Supplier reliably delivers on Choco orders. No confirmation call needed.</description>
    <inlineHelpText>Supplier reliably delivers on Choco orders. No confirmation call needed.</inlineHelpText>
    <label>CS Trusted Supplier</label>
    <type>Checkbox</type>
</CustomField>