Burak Sandbox/force-app/main/default/objects/Account/fields/Cst__c.field-meta.xml
<CustomField>
    <fullName>Cst__c</fullName>
    <label>Cst.#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>