Burak Sandbox/force-app/main/default/objects/Account/fields/Cutoff_Time__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Time__c</fullName>
    <label>Cutoff Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>