Burak Sandbox/force-app/main/default/objects/Account/fields/date_of_founding__c.field-meta.xml
<CustomField>
    <fullName>date_of_founding__c</fullName>
    <description>Date on which the establishment was registered with the authorities.</description>
    <label>Date of Founding</label>
    <type>Date</type>
</CustomField>