Burak Sandbox/force-app/main/default/objects/Account/fields/Delivering_City__c.field-meta.xml
<CustomField>
    <fullName>Delivering_City__c</fullName>
    <label>Delivering City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>