Burak Sandbox/force-app/main/default/objects/Account/fields/Delivering_Country__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Country__c</fullName>
    <label>Delivering Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>