Burak Sandbox/force-app/main/default/objects/Account/fields/Delivering_Street__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Street__c</fullName>
    <label>Delivering Street</label>
    <length>150</length>
    <type>Text</type>
</CustomField>