Burak Sandbox/force-app/main/default/objects/Account/fields/Delivering_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Zip_Postal_Code__c</fullName>
    <label>Delivering Zip / Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>