Burak Sandbox/force-app/main/default/objects/Account/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Buyer delivers food to customers</inlineHelpText>
    <label>Delivery</label>
    <type>Checkbox</type>
</CustomField>