Burak Sandbox/force-app/main/default/objects/Account/fields/Description_FieldMapping__c.field-meta.xml
<CustomField>
    <fullName>Description_FieldMapping__c</fullName>
    <label>Handover</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>