Burak Sandbox/force-app/main/default/objects/Account/fields/DM_Availability__c.field-meta.xml
<CustomField>
    <fullName>DM_Availability__c</fullName>
    <inlineHelpText>At which times the DM is available</inlineHelpText>
    <label>DM Availability</label>
    <type>TextArea</type>
</CustomField>