Burak Sandbox/force-app/main/default/objects/Account/fields/DM_Contact_Available__c.field-meta.xml
<CustomField>
    <fullName>DM_Contact_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Contact Available</label>
    <type>Checkbox</type>
</CustomField>