Burak Sandbox/force-app/main/default/objects/Account/fields/Dreamlist_Account__c.field-meta.xml
<CustomField>
    <fullName>Dreamlist_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shortlist of 30-50 northstar vendors in the EU to track progress.</description>
    <label>Dreamlist Account</label>
    <type>Checkbox</type>
</CustomField>