Burak Sandbox/force-app/main/default/objects/Account/fields/Drive_Links__c.field-meta.xml
<CustomField>
    <fullName>Drive_Links__c</fullName>
    <description>Google Drive link of the processed lists</description>
    <inlineHelpText>Google Drive link of the processed lists</inlineHelpText>
    <label>Drive Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>