Burak Sandbox/force-app/main/default/objects/Account/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <label>Emails</label>
    <type>TextArea</type>
</CustomField>