Burak Sandbox/force-app/main/default/objects/Account/fields/Employee_Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>Employee_Growth_Rate__c</fullName>
    <description>This is an estimate of the year-over-year headcount growth of the business</description>
    <label>Employee Growth Rate</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>