Burak Sandbox/force-app/main/default/objects/Account/fields/EPS_Approval__c.field-meta.xml
<CustomField>
    <fullName>EPS_Approval__c</fullName>
    <label>EPS Approval</label>
    <length>50</length>
    <type>Text</type>
</CustomField>