Burak Sandbox/force-app/main/default/objects/Account/fields/EPS_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>EPS_Approval_Date__c</fullName>
    <description>The date of the most recently closed/won EPS opportunity.</description>
    <inlineHelpText>The date of the most recently closed/won EPS opportunity.</inlineHelpText>
    <label>EPS Approval Date</label>
    <type>Date</type>
</CustomField>