Burak Sandbox/force-app/main/default/objects/Account/fields/EPS_Owner__c.field-meta.xml
<CustomField>
    <fullName>EPS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>