Burak Sandbox/force-app/main/default/objects/Account/fields/ERP_Integration_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ERP_Integration_Opportunity__c</fullName>
    <label>ERP Integration Opportunity #</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>ERP Integration</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>