Burak Sandbox/force-app/main/default/objects/Account/fields/ERP_Research_Target_2021Q3__c.field-meta.xml
<CustomField>
    <fullName>ERP_Research_Target_2021Q3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERP Research Target_2021Q3</label>
    <type>Checkbox</type>
</CustomField>