Burak Sandbox/force-app/main/default/objects/Account/fields/ERP_Tech_System__c.field-meta.xml
<CustomField>
    <fullName>ERP_Tech_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP/Tech System</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an ERP/Tech Systems Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>ERP Systems</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (ERP/Tech System)</relationshipLabel>
    <relationshipName>ERPTechSystems</relationshipName>
    <type>Lookup</type>
</CustomField>