Burak Sandbox/force-app/main/default/objects/Account/fields/Est_of_Retail_Buyers__c.field-meta.xml
<CustomField>
    <fullName>Est_of_Retail_Buyers__c</fullName>
    <label>Est. # of Retail Buyers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>