Burak Sandbox/force-app/main/default/objects/Account/fields/Estimated_of_Buyers__c.field-meta.xml
<CustomField>
    <fullName>Estimated_of_Buyers__c</fullName>
    <label>Est. # of Buyer</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>