Burak Sandbox/force-app/main/default/objects/Account/fields/Estimated_of_vendors_used__c.field-meta.xml
<CustomField>
    <fullName>Estimated_of_vendors_used__c</fullName>
    <description>Number of vendors we have on Choco for a specific buyer</description>
    <label>Estimated # of vendors used</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>