Burak Sandbox/force-app/main/default/objects/Account/fields/Existing_Order_Methods__c.field-meta.xml
<CustomField>
    <fullName>Existing_Order_Methods__c</fullName>
    <label>Existing Order Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Onlineshop</fullName>
            </value>
            <value>
                <fullName>Own App</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>