Burak Sandbox/force-app/main/default/objects/Account/fields/Existing_Webshop__c.field-meta.xml
<CustomField>
    <fullName>Existing_Webshop__c</fullName>
    <inlineHelpText>Please indicate whether the vendor has an existing webshop in place</inlineHelpText>
    <label>Existing Webshop</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>