Burak Sandbox/force-app/main/default/objects/Account/fields/Expected_MRR__c.field-meta.xml
<CustomField>
    <fullName>Expected_MRR__c</fullName>
    <inlineHelpText>The MRR you expect from this supplier based on the commercial agreement</inlineHelpText>
    <label>Expected MRR</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>