Burak Sandbox/force-app/main/default/objects/Account/fields/External_Description__c.field-meta.xml
<CustomField>
    <fullName>External_Description__c</fullName>
    <label>External Description</label>
    <type>TextArea</type>
</CustomField>