Burak Sandbox/force-app/main/default/objects/Account/fields/Feature_Request_Detail__c.field-meta.xml
<CustomField>
    <fullName>Feature_Request_Detail__c</fullName>
    <label>Feature Request Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>