Burak Sandbox/force-app/main/default/objects/Account/fields/Feature_Requests_Payments__c.field-meta.xml
<CustomField>
    <fullName>Feature_Requests_Payments__c</fullName>
    <label>Feature Requests Payments</label>
    <type>TextArea</type>
</CustomField>